# microservices-django-kafka

./: .gitignore  README.md  demo.sh  docker-compose.yaml  initialize_services.sh  justfile  tox.ini
accounting-service/: .env  Dockerfile  README.md  requirements.txt
customer-service/: .env  Dockerfile  README.md  requirements.txt
events/: LICENSE  README.md  pyproject.toml  pytest.ini
events-lib/: README.md  pyproject.toml
events-lib/src/events/: __init__.py  decorators.py  handlers.py  models.py  serializers.py
events-lib/src/events/migrations/: 0001_initial.py  0002_rename_type_event_event_type_event_content_type_and_more.py
events/src/events/: __init__.py  conf.py  conversion.py  decorators.py  enums.py  handlers.py  models.py  serializers.py
events/src/events/conversion/: __init__.py  factory.py  kafka.py
events/src/events/management/commands/: configure_topics.py  consume_events.py
events/src/events/migrations/: 0001_initial.py  0002_rename_type_event_event_type_event_content_type_and_more.py  0003_rename_event_outboxitem.py  0004_rename_aggregateid_outboxitem_message_key_and_more.py
events/tests/: settings.py  test_conf.py  test_decorators.py  test_kafka.py  test_models.py
events/tests/schemas/: pull_request.avsc  widget.avsc
events/tests/testapp/: models.py
events/tests/testapp/migrations/: 0001_initial.py
ksqldb/: .env  Dockerfile  README.md  migrate.sh
orders-service/: .env  Dockerfile  README.md  requirements.txt
person-service/: .env  Dockerfile  README.md  requirements.txt
planning-service/: .env  Dockerfile  README.md  (+2 more)
(+89 files in other folders)
