[build-system]
requires = [
  "hatchling",
  "click==8.1.3",
  "confluent_kafka==1.9.2",
  "Django==4.1.2",
  "django-click==2.3.0",
  "fastavro==1.6.1",
  "jsonschema==4.17.0",
  "cloudevents==1.7.0",
]
build-backend = "hatchling.build"

[project]
name = "events"
version = "0.0.1"
authors = [
  { name="David Martines", email="none@noemail.com" },
]
description = "Example Django-Kafka eventing utilities"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/davidwmartines/microservices-django-kafka"
